# bartz

./: .gitignore  .pre-commit-config.yaml  DESCRIPTION  Makefile  README.md  asv.conf.json  pyproject.toml
.asv/results/: benchmarks.json
.asv/results/3060-bb14a9c996d1/: 21cf0a89-virtualenv-py3.14.json  485be21f-virtualenv-py3.14.json  55c92fd4-virtualenv-py3.14.json  b145bd73-virtualenv-py3.14.json  c0940a3a-virtualenv-py3.14.json  d549d06f-virtualenv-py3.14.json  machine.json
.asv/results/5060ti-2c9f43d575fa/: 485be21f-virtualenv-py3.14.json  55c92fd4-virtualenv-py3.14.json  b145bd73-virtualenv-py3.14.json  b4b03935-virtualenv-py3.14.json  c0940a3a-virtualenv-py3.14.json  d549d06f-virtualenv-py3.14.json  e3d503c5-virtualenv-py3.14.json  machine.json
.asv/results/a4000-0c71347654aa/: 485be21f-virtualenv-py3.14.json  55c92fd4-virtualenv-py3.14.json  b145bd73-virtualenv-py3.14.json  b4b03935-virtualenv-py3.14.json  c0940a3a-virtualenv-py3.14.json  d549d06f-virtualenv-py3.14.json  e3d503c5-virtualenv-py3.14.json  machine.json
.asv/results/a4000-18aa757c71c9/: 1276217d-virtualenv-py3.14.json  485be21f-virtualenv-py3.14.json  55c92fd4-virtualenv-py3.14.json  a8b88238-virtualenv-py3.14.json  b145bd73-virtualenv-py3.14.json  c0940a3a-virtualenv-py3.14.json  d549d06f-virtualenv-py3.14.json  e3d503c5-virtualenv-py3.14.json  machine.json
.asv/results/a4000-24d1ee67f554/: 485be21f-virtualenv-py3.14.json  55c92fd4-virtualenv-py3.14.json  a8b88238-virtualenv-py3.14.json  acb4a409-virtualenv-py3.14.json  b145bd73-virtualenv-py3.14.json  c0940a3a-virtualenv-py3.14.json  d549d06f-virtualenv-py3.14.json  e3d503c5-virtualenv-py3.14.json  machine.json
.asv/results/a4000-7c259586cfac/: 485be21f-virtualenv-py3.14.json  55c92fd4-virtualenv-py3.14.json  a71f04ba-virtualenv-py3.14.json  b145bd73-virtualenv-py3.14.json  c0940a3a-virtualenv-py3.14.json  d549d06f-virtualenv-py3.14.json  e3d503c5-virtualenv-py3.14.json  machine.json
.asv/results/a4000-dcb3e83c3521/: 485be21f-virtualenv-py3.14.json  55c92fd4-virtualenv-py3.14.json  764ffbde-virtualenv-py3.14.json  a8b88238-virtualenv-py3.14.json  b145bd73-virtualenv-py3.14.json  c0940a3a-virtualenv-py3.14.json  d549d06f-virtualenv-py3.14.json  dc12aa70-virtualenv-py3.14.json  e3d503c5-virtualenv-py3.14.json  machine.json
.asv/results/gattocrucco-m1/: 1276217d-virtualenv-py3.14.json  1d8b783b-virtualenv-py3.14.json  21cf0a89-virtualenv-py3.14.json  485be21f-virtualenv-py3.14.json  55c92fd4-virtualenv-py3.14.json  764ffbde-virtualenv-py3.14.json  a587b363-virtualenv-py3.14.json  a8b88238-virtualenv-py3.14.json  acb4a409-virtualenv-py3.14.json  b145bd73-virtualenv-py3.14.json  b4b03935-virtualenv-py3.14.json  c0940a3a-virtualenv-py3.14.json  d549d06f-virtualenv-py3.14.json  dc12aa70-virtualenv-py3.14.json  e3d503c5-virtualenv-py3.14.json
.asv/results/vast-A4000/: 37f48b71-virtualenv-py3.14.json  485be21f-virtualenv-py3.14.json  b145bd73-virtualenv-py3.14.json  c0940a3a-virtualenv-py3.14.json  c6874eae-virtualenv-py3.14.json  d549d06f-virtualenv-py3.14.json  machine.json
.claude/: CLAUDE.md  settings.json
.github/actions/build-docs/: action.yml
.github/actions/deploy-site/: action.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: release-docs.yml  release.yml  tests.yml
.vast/: bootstrap.sh
.zed/: settings.json
benchmarks/: __init__.py  _vendor_latest_bartz.py  rmse.py  speed.py
config/: asv-install.sh  asv_machine.py  check_path_headers.py  check_workarounds.py  measure_test_memory.sh  refs-for-asv.py  refs_for_asv.py  top_tests_by_memory.py  update_oldest_deps.py  update_python_version.py  util.py
config/ipython/profile_default/: ipython_config.py
docs/: changelog.md  conf.py  development.rst  index.rst  pkglist.md
docs/_inventory/: equinox.inv  make_inventories.py  make_stochtree_inventory.py  stochtree.inv
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst  module.rst
docs/examples/: basic_simdata.ipynb  index.rst
docs/guide/: installation.rst  quickstart.rst
docs/reference/: debug.rst  grove.rst  index.rst  interface.rst  mcmcloop.rst  newinterf.rst  prepcovars.rst  stochtree.rst  test.rst
scripts/: .gitignore  __init__.py  opt-augment.jsonc  opt-auto-count-cpu.jsonc  opt-auto-count.jsonc  opt-auto-prec-cpu.jsonc  opt-auto-prec.jsonc  opt-auto-resid-cpu.jsonc  opt-auto-resid.jsonc  opt-chainaxis-batches-count.jsonc  opt-chainaxis-batches-prec.jsonc  opt-chainaxis-batches.jsonc  opt-chainaxis.jsonc  opt-count-cpu.jsonc  opt-count.jsonc  opt-onehot-count-cpu.jsonc  opt-onehot-count.jsonc  opt-onehot-prec-cpu.jsonc  opt-onehot-prec.jsonc  opt-onehot-resid-cpu.jsonc  opt-onehot-resid.jsonc  opt-plot.py  opt-prec-cpu.jsonc  opt-prec-scale-dtype.jsonc  opt-prec.jsonc  opt-resid-cpu.jsonc  opt-resid-dtype.jsonc  opt-resid.jsonc  opt-unroll.jsonc  opt.py  optnumbatches-plot.py  optnumbatches.py  resid-accuracy.py
src/bartz/: BART.py  __init__.py  _interface.py  _profiler.py  _typing.py  _workarounds.py  debug.py  grove.py  mcmcloop.py  prepcovars.py
src/bartz/BART/: __init__.py  _gbart.py
src/bartz/_jaxext/: __init__.py  _autobatch.py  _equinox.py  _jaxext.py  _jit.py
src/bartz/debug/: __init__.py  _check.py  _debuggbart.py  _prior.py  _traceconv.py
src/bartz/grove/: __init__.py  _check.py  _grove.py
src/bartz/jaxext/: __init__.py  _autobatch.py
src/bartz/mcmcloop/: __init__.py  _callback.py  _evaluate.py  _loop.py  _trace.py
src/bartz/mcmcstep/: __init__.py  _axes.py  _lazy.py  _moves.py  _reduction.py  _scatter.py  _state.py  _step.py
src/bartz/prepcovars/: __init__.py  _prepcovars.py
src/bartz/stochtree/: __init__.py  _preprocess.py  _stochtree.py
src/bartz/testing/: __init__.py  _dgp.py  (+2 more)
tests/: _old_make_kw.py  conftest.py  test_BART.py  test_debug.py  test_dgp.py  test_docs.py  test_interface.py  test_jaxext.py  test_mcmcloop.py  test_mcmcstep.py  test_meta.py  test_mvbart.py  test_naming.py  test_prepcovars.py  test_profiler.py  test_stochtree.py  test_workarounds.py  util.py
tests/rbartpackages/: BART.py  BART3.py  _base.py  bartMachine.py  dbarts.py
(+9 files in other folders)
