# bartz/pyproject.toml
#
# Copyright (c) 2024-2026, The Bartz Contributors
#
# This file is part of bartz.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[build-system]
requires = ["hatchling>=1.27,<2", "hatch-vcs>=0.4,<1"]
build-backend = "hatchling.build"

[project]
name = "bartz"
dynamic = ["version"]
description = "Super-fast BART (Bayesian Additive Regression Trees) in Python"
authors = [{ name = "Giacomo Petrillo", email = "info@giacomopetrillo.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "equinox>=0.12.2",
    # WORKAROUND(jax<0.10.3): jax 0.10.2 has a severe GPU scatter-add
    # regression (high-contention scatter into a small array is up to ~2000x
    # slower than 0.10.1), which hits the per-leaf reductions; exclude it.
    "jax>=0.6.2,!=0.10.2",
    "jaxtyping>=0.3.2",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
]

[project.optional-dependencies]
# WORKAROUND(jax<0.10.3): exclude jax 0.10.2, see the core jax dependency above
cuda12 = ["jax[cuda12]>=0.6.2,!=0.10.2"]
cuda13 = ["jax[cuda13]>=0.6.2,!=0.10.2"]

[project.urls]
Homepage = "https://github.com/bartz-org/bartz"
Documentation = "https://bartz-org.github.io/bartz/docs-dev"
Issues = "https://github.com/bartz-org/bartz/issues"

# The version is derived from git: the latest v* tag, plus a .devN+g<commit>
# suffix if the tagged commit is not checked out.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/bartz/_version.py"
template = '''# file generated by hatch-vcs, do not edit or track in version control
__version__ = {version!r}
__version_info__ = {version_tuple!r}
'''

[tool.hatch.build.targets.wheel]
packages = ["src/bartz"]

[tool.hatch.build.targets.sdist]
only-include = ["src/bartz"]

[dependency-groups]
dev = [
    "appnope>=0.1.4",
    "ipython>=8.37.0",
    "matplotlib>=3.10.3",
    "matplotlib-label-lines>=0.8.1",
    "pre-commit>=4.2.0",
    "rich>=14.0.0",
    "snakeviz>=2.2.2",
    "virtualenv>=20.31.2",
    "asv>=0.6.4",
    "beartype>=0.21.0",
    "flaky>=3.8.1",
    "gitpython>=3.1.44",
    "packaging>=25.0",
    "polars[pandas,pyarrow]>=1.31.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    # WORKAROUND(pytest<9): pytest 9 has built-in subtests support
    "pytest-subtests>=0.14.2",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.7.0",
    "rbartpackages[jax,polars]>=0.1.0",
    "stochtree>=0.4.2",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "tomli>=2.2.1",
    "myst-nb>=1.2.0",
    "jupyterlab>=4.4.3",
    "diff-cover>=9.4.1",
    # the floor satisfies the OLD_DATE policy; lint (and hence ty) only ever
    # runs on the latest toolchain, so the old version is installed but unused
    "ty>=0.0.1a7",
    # vendored shellcheck for the actionlint hook: pinned here so its presence
    # and version don't depend on a system install. `uv run` puts it on PATH,
    # where actionlint finds it; absent it, actionlint silently skips shellcheck.
    "shellcheck-py>=0.10.0.1",
]

# WORKAROUND(pytest<9): use [tool.pytest]
[tool.pytest.ini_options]
cache_dir = "config/pytest_cache"
testpaths = ["tests"]
addopts = [
    "-r xXfE",
    "--pdbcls=IPython.terminal.debugger:TerminalPdb",
    "--durations=3",
    "--verbose",
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore:unclosed database:ResourceWarning",
]
timeout = 1024  # about 15 min, ci runners are slow
timeout_method = "thread"  # when jax hangs, signals do not work

[tool.coverage.run]
branch = true
source_pkgs = ["bartz", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.html]
show_contexts = true
directory = "_site/coverage"

[tool.coverage.paths]
# the first path in each list must be the source directory in the machine that's
# generating the coverage report

github = [
    '/home/runner/work/bartz/bartz/src/bartz/',
    '/Users/runner/work/bartz/bartz/src/bartz/',
    'D:\a\bartz\bartz\src\bartz\',
    '/Library/Frameworks/Python.framework/Versions/*/lib/python*/site-packages/bartz/',
    '/Users/runner/hostedtoolcache/Python/*/*/lib/python*/site-packages/bartz/',
    '/opt/hostedtoolcache/Python/*/*/lib/python*/site-packages/bartz/',
    'C:\hostedtoolcache\windows\Python\*\*\Lib\site-packages\bartz\',
]

local = [
    'src/bartz/',
    '/home/runner/work/bartz/bartz/src/bartz/',
    '/Users/runner/work/bartz/bartz/src/bartz/',
    'D:\a\bartz\bartz\src\bartz\',
    '/Library/Frameworks/Python.framework/Versions/*/lib/python*/site-packages/bartz/',
    '/Users/runner/hostedtoolcache/Python/*/*/lib/python*/site-packages/bartz/',
    '/opt/hostedtoolcache/Python/*/*/lib/python*/site-packages/bartz/',
    'C:\hostedtoolcache\windows\Python\*\*\Lib\site-packages\bartz\',
]

[tool.uv]
# the version is dynamic (git-derived), so rebuild the project metadata when
# the commit or tags change, not only when pyproject.toml changes. Caveat: as
# of uv 0.11.17 the commit key does not work in linked worktrees (uv does not
# follow commondir, records commit=null), so in our worktree-first layout the
# refresh-editable-version git hook (.pre-commit-config.yaml) covers HEAD
# moves instead; after a hookless HEAD move (e.g. `git reset`), refresh
# manually with `uv sync --reinstall-package bartz`. Tag creation does
# trigger a rebuild (loose refs are detected; packed ones are not).
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]
exclude-newer = '1 week'
# WORKAROUND(rbartpackages<0.2.0): 0.1.0 was released inside the exclude-newer
# window; remove this override starting 2026-06-13 (keeping it would pin the
# cutoff, silently blocking newer releases). The version bound is a backstop in
# case the date passes unnoticed: raising the floor flags this comment.
# tests-old has its own exemption in the Makefile.
exclude-newer-package = { rbartpackages = '2026-06-06T22:00:00Z' }

[tool.ruff]
# src/bartz/_version.py is generated by hatch-vcs and gitignored
exclude = [".asv", "*.ipynb", "benchmarks/latest_bartz", "src/bartz/_version.py"]
cache-dir = "config/ruff_cache"

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
# `stochtree` and `jax` are third-party dependencies, but a developer checkout
# of the upstream repo at the project root makes isort auto-detect them as
# first-party, so import sorting differs between dev machines and CI. Pin them.
known-third-party = ["stochtree", "jax"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-bugbear]
# equinox modules are frozen, so they are safe to construct in argument defaults
extend-immutable-calls = [
    "bartz.mcmcstep._reduction.AutoBatchedReduction",
    "bartz.mcmcstep._reduction.AutoOneHotReduction",
    "bartz.mcmcstep._reduction.BatchedReduction",
    "bartz.testing._distr.Constant",
    "bartz.testing._distr.DiscreteUniform",
    "bartz.testing._distr.Normal",
    "bartz.testing._distr.Uniform",
]

[tool.ruff.lint]
select = [
    "ICN",  # flake8-import-conventions
    "ERA",  # eradicate
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "B",    # bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "CPY",  # flake8-copyright
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "EXE",  # flake8-executable
    "FIX",  # flake8-fixme
    "ISC",  # flake8-implicit-str-concat
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "FLY",  # flynt
    "I",    # isort
    "C90",  # mccabe
    "NPY",  # NumPy-specific rules
    "PERF", # Perflint
    "W",    # pycodestyle Warning
    "F",    # pyflakes
    "D",    # pydocstyle
    "PGH",  # pygrep-hooks
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pyling Warning
    "UP",   # pyupgrade
    "FURB", # refurb
    "RUF",  # Ruff-specific rules
    "TRY",  # tryceratops
    "ANN",  # flake8-annotations
]
ignore = [
    "B028",    # warn with stacklevel = 2
    "C408",    # Unnecessary `dict()` call (rewrite as a literal), it's too convenient for kwargs
    "D105",    # Missing docstring in magic method
    "F722",    # Syntax error in forward annotation. I ignore this because jaxtyping uses strings for shapes instead of for deferred annotations.
    "PIE790",  # Unnecessary ... or pass. Ignored because sometimes I use ... as sentinel to tell the rest of ruff and pyright that an implementation is a stub.
    "PLR0912", # Too many branches; ignore bc C901 already handles this
    "PLR0913", # Too many arguments in function definition. Maybe I should do something about this?
    "PLR2004", # Magic value used in comparison, consider replacing `*` with a constant variable
    "RET505",  # Unnecessary `{branch}` after `return` statement. I ignore this because I like to keep branches for readability.
    "RET506",  # Unnecessary `else` after `raise` statement. I ignore this because I like to keep branches for readability.
    "S101",    # Use of `assert` detected. Too annoying.
    "SIM108",  # SIM108 Use ternary operator `*` instead of `if`-`else`-block, I find blocks more readable
    "UP037",   # Remove quotes from type annotation. Ignore because jaxtyping.
]

[tool.ruff.lint.per-file-ignores]
"{config/*,docs/*}" = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "INP001", # File * is part of an implicit namespace package. Add an `__init__.py`.
]
"{config/*,docs/*,tests/*,benchmarks/_vendor_latest_bartz.py,scripts/*}" = [
    "T201", # `print` found
]
"{tests/*,benchmarks/*}" = [
    "SLF001", # Private member accessed: `*`
    "TID253", # `{module}` is banned at the module level
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-copyright]
min-file-size = 1

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-import-conventions.aliases]
"jax.numpy" = "jnp"

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["jax.random", "jax.lax", "jax.numpy", "jax.tree", "math"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"jax.lax.reciprocal".msg = "Use jnp.reciprocal"
"jax.random.PRNGKey".msg = "User jax.random.key"
"jax.random.gamma".msg = "jax's gamma sampler bloats jitted code with rejection loops; use loggamma from bartz._jaxext.random."
"jax.random.loggamma".msg = "jax's loggamma sampler bloats jitted code with rejection loops; use loggamma from bartz._jaxext.random."
"jax.tree_util.tree_all".msg = "Use jax.tree.all"
"jax.tree_util.tree_flatten".msg = "Use jax.tree.flatten"
"jax.tree_util.tree_flatten_with_path".msg = "Use jax.tree.flatten_with_path"
"jax.tree_util.tree_leaves".msg = "Use jax.tree.leaves"
"jax.tree_util.tree_leaves_with_path".msg = "Use jax.tree.leaves_with_path"
"jax.tree_util.tree_map".msg = "Use jax.tree.map"
"jax.tree_util.tree_map_with_path".msg = "Use jax.tree.map_with_path"
"jax.tree_util.tree_reduce".msg = "Use jax.tree.reduce"
"jax.tree_util.tree_structure".msg = "Use jax.tree.structure"
"jax.tree_util.tree_transpose".msg = "Use jax.tree.transpose"
"jax.tree_util.tree_unflatten".msg = "Use jax.tree.unflatten"
"numpy.testing.assert_allclose".msg = "Use tests.util.assert_allclose (zero default tolerances)."
"numpy.testing.assert_array_equal".msg = "Use tests.util.assert_array_equal (strict=True default)."

[tool.pydoclint]
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
treat-property-methods-as-class-attributes = true
check-style-mismatch = true
show-filenames-in-every-violation-message = true
allow-init-docstring = false
check-class-attributes = false
# do not check class attributes because pydoclint only supports them being
# documented in the class docstring while we document them individually

[tool.pydocstringformatter]
# numpydoc-only style: this leaves out the pep257 `split-summary-body`
# formatter, which mis-splits our wrapped attribute docstrings at the first
# physical line (and then inserts mid-sentence periods via `final-period`).
style = ["numpydoc"]
# keep the closing `"""` inline on attribute docstrings, as is our convention.
closing-quotes = false

[tool.ty.rules]
# error on stale `ty: ignore` comments, e.g., ignores for diagnostics fixed by
# typing improvements in our dependencies
unused-ignore-comment = "error"

[tool.ty.src]
# example notebooks shall stay simple and typing-free
exclude = ["docs/examples/"]
